--- a/symfonyCRUDpanel/web/demo/index.html
+++ b/symfonyCRUDpanel/web/demo/index.html
@@ -1,35 +1,8 @@
-{% extends "::base.html.twig" %}
-
-{% block body %}
-    <h2></h2>
-    {#<h3>Album: {{ entity | join }}</h3>#}
-    <h4>Zdjęcia:</h4>
-
-    {#{{ entity.id }}#}
-    {#{{ entity.filenamee }}#}
-    {#{{ entity.contents }}#}
-
-    {#<div class="col-md-3">#}
-    {#<a href="{{ path('file_show', { 'filename': entity.filenamee }) }}" class="thumbnail" >#}
-    {#<img class= "imzg-responsive" src="{{ path('file_show', { 'filename': entity.filenamee }) }}" alt="..." style="height: 180px">#}
-    {#</a>#}
-    {#</div>#}
-
-    {#{% for e in entity %}#}
-        {#<div class="col-md-3">#}
-        {#<a href="{{ path('file_show', { 'filename': e.filename }) }}" class="thumbnail" >#}
-        {#<img class= "img-responsive" src="{{ path('file_show', { 'filename': e.filename }) }}" alt="..." style="height: 180px">#}
-        {#</a>#}
-        {#</div>#}
-    {#{% endfor %}#}
-
-
-
-
-
-
-
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>jQuery lightGallery demo</title>
         <link href="https://cdn.rawgit.com/sachinchoolur/lightgallery.js/master/dist/css/lightgallery.css" rel="stylesheet">
         <style>
             body{
@@ -150,39 +123,43 @@
                 padding-bottom: 80px;
             }
         </style>
-
+    </head>
     <body class="home">
 
-    <div class="demo-gallery">
-        <ul id="lightgallery" class="list-unstyled row">
-            {% for e in entity %}
-            <li class="col-xs-6 col-sm-4 col-md-3" data-responsive="" data-src="{{ path('file_show', { 'filename': e.filename }) }}" data-sub-html="<h4>Fading Light</h4><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>" data-pinterest-text="Pin it1" data-tweet-text="share on twitter 1">
-                <a href="">
-                    <img class="img-responsive" src="{{ path('file_show', { 'filename': e.filename }) }}" alt="Thumb-1">
-                </a>
-            </li>
-            {% endfor %}
-        </ul>
-    </div>
-
-
-    <script src="https://cdn.jsdelivr.net/picturefill/2.3.1/picturefill.min.js"></script>
-    <script src="https://cdn.rawgit.com/sachinchoolur/lightgallery.js/master/dist/js/lightgallery.js"></script>
-    <script src="https://cdn.rawgit.com/sachinchoolur/lg-pager.js/master/dist/lg-pager.js"></script>
-    <script src="https://cdn.rawgit.com/sachinchoolur/lg-autoplay.js/master/dist/lg-autoplay.js"></script>
-    <script src="https://cdn.rawgit.com/sachinchoolur/lg-fullscreen.js/master/dist/lg-fullscreen.js"></script>
-    <script src="https://cdn.rawgit.com/sachinchoolur/lg-zoom.js/master/dist/lg-zoom.js"></script>
-    <script src="https://cdn.rawgit.com/sachinchoolur/lg-hash.js/master/dist/lg-hash.js"></script>
-    <script src="https://cdn.rawgit.com/sachinchoolur/lg-share.js/master/dist/lg-share.js"></script>
-    <script>
-        lightGallery(document.getElementById('lightgallery'));
-    </script>
+        <div class="demo-gallery">
+            <ul id="lightgallery" class="list-unstyled row">
+                <li class="col-xs-6 col-sm-4 col-md-3" data-responsive="img/1-375.jpg 375, img/1-480.jpg 480, img/1.jpg 800" data-src="img/1-1600.jpg" data-sub-html="<h4>Fading Light</h4><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>" data-pinterest-text="Pin it1" data-tweet-text="share on twitter 1">
+                    <a href="">
+                        <img class="img-responsive" src="img/thumb-1.jpg" alt="Thumb-1">
+                    </a>
+                </li>
+                <li class="col-xs-6 col-sm-4 col-md-3" data-responsive="img/2-375.jpg 375, img/2-480.jpg 480, img/2.jpg 800" data-src="img/2-1600.jpg" data-sub-html="<h4>Bowness Bay</h4><p>A beautiful Sunrise this morning taken En-route to Keswick not one as planned but I'm extremely happy I was passing the right place at the right time....</p>" data-pinterest-text="Pin it1" data-tweet-text="share on twitter 1">
+                    <a href="">
+                        <img class="img-responsive" src="img/thumb-2.jpg" alt="Thumb-2">
+                    </a>
+                </li>
+                <li class="col-xs-6 col-sm-4 col-md-3" data-responsive="img/13-375.jpg 375, img/13-480.jpg 480, img/13.jpg 800" data-src="img/13-1600.jpg" data-sub-html="<h4>Bowness Bay</h4><p>A beautiful Sunrise this morning taken En-route to Keswick not one as planned but I'm extremely happy I was passing the right place at the right time....</p>" data-pinterest-text="Pin it1" data-tweet-text="share on twitter 1">
+                    <a href="">
+                        <img class="img-responsive" src="img/thumb-13.jpg" alt="Thumb-3">
+                    </a>
+                </li>
+                <li class="col-xs-6 col-sm-4 col-md-3" data-responsive="img/4-375.jpg 375, img/4-480.jpg 480, img/4.jpg 800" data-src="img/4-1600.jpg" data-sub-html="<h4>Bowness Bay</h4><p>A beautiful Sunrise this morning taken En-route to Keswick not one as planned but I'm extremely happy I was passing the right place at the right time....</p>" data-pinterest-text="Pin it1" data-tweet-text="share on twitter 1">
+                    <a href="">
+                        <img class="img-responsive" src="img/thumb-4.jpg" alt="Thumb-4">
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <script src="https://cdn.jsdelivr.net/picturefill/2.3.1/picturefill.min.js"></script>
+        <script src="https://cdn.rawgit.com/sachinchoolur/lightgallery.js/master/dist/js/lightgallery.js"></script>
+        <script src="https://cdn.rawgit.com/sachinchoolur/lg-pager.js/master/dist/lg-pager.js"></script>
+        <script src="https://cdn.rawgit.com/sachinchoolur/lg-autoplay.js/master/dist/lg-autoplay.js"></script>
+        <script src="https://cdn.rawgit.com/sachinchoolur/lg-fullscreen.js/master/dist/lg-fullscreen.js"></script>
+        <script src="https://cdn.rawgit.com/sachinchoolur/lg-zoom.js/master/dist/lg-zoom.js"></script>
+        <script src="https://cdn.rawgit.com/sachinchoolur/lg-hash.js/master/dist/lg-hash.js"></script>
+        <script src="https://cdn.rawgit.com/sachinchoolur/lg-share.js/master/dist/lg-share.js"></script>
+        <script>
+            lightGallery(document.getElementById('lightgallery'));
+        </script>
     </body>
-
-
-
-
-
-
-
-{% endblock %}
+</html>
